--- a/midterm/main.css
+++ b/midterm/main.css
@@ -59,9 +59,9 @@ nav a:hover{
 }
 
 #footer{
-    margin-top: 10px;
+    margin-top: 20px;
     text-align: center;
-    margin: auto;
+    margin: 20px auto;
 }
 
 
